objects/Decision_Criteria__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Comment__c</fullName>
        <label>Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Decision_Criteria_Template__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Decision Criteria Template</label>
        <referenceTo>Decision_Criteria_Template__c</referenceTo>
        <relationshipLabel>Decision Criteria</relationshipLabel>
        <relationshipName>Decision_Criteria</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Decision Criteria</relationshipLabel>
        <relationshipName>Decision_Criteria</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Position__c</fullName>
        <label>Position</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Question_English__c</fullName>
        <label>Question English</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Decision Criteria</label>
    <nameField>
        <displayFormat>DC-{000000}</displayFormat>
        <label>Decision Criteria Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Decision Criteria</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>